SoilMod - Change log

============================
Post-version 1.2.x

Fixes:

- Removed "force send CutterAreaEvent", as it was causing other problems.

Enhancements:

  
Additions/updates:

- Italian translations by DD ModPassion


============================
Version 1.2.0

Fixes:

- Front tank for spraying can now be used to spray fertilizer and herbicide.
- If not already set an overlay HUD icon for 'kalk', it will be set by SoilMod.
- Possibility to overwrite the default fruit's relation to fertilizer/herbicide types.
- There was a too high yield when using MoreRealistic equipment.
- Multiplayer, force send CutterAreaEvent if something was cut but modified volume resulted in zero.

Enhancements:

- Some settings can now be changed by the map-script, if the map-author so chooses.
  These are; delayGrowthCycle, reduceWindrows, removeSprayMoisture & disableWithering.
  Look for 'setMapProperty' in the supplied 'SampleModMap - Additions.LUA' script.
- The above mentioned settings will also be stored in the CareerSavegame.XML file.
  They can be changed there too, but unfortunately will NOT work correctly for
  multiplayer sessions, as clients won't be notified of the changes in the savegame.
  
Additions/updates:

- Czech translations by KingFrame & Albi.
- More/updated Russian translations by Gonimy-Vetrom.
- More German translations by webalizer.
- French translations by Marxtai & Dural.
- Removed two of the "difficult to understand instructions" from the 'map - Instructions.txt'.
  Now fileId's and materialId's are pre-set to large numbers.
- Plugin support for other mods, so they can "add" their own effects.
  Documentation with sample plugins is a 'Work-In-Progress' and not finalized.
  For questions and alike, please create an issue at the GitHub repository.


============================
Version 1.1.0

Fixes:

- PDA screen 'Fruit Effects' now scrolls, to reveal more crops.